Update blog design and exclude ko folder

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@ layout: default
 ---
 
 <script>
-  // 기본 언어로 리다이렉트
+  // 기본 언어로 자동 리다이렉트
   const baseUrl = '{{ site.baseurl }}';
   const currentPath = window.location.pathname;
   
@@ -13,11 +13,18 @@ layout: default
 </script>
 
 <div class="hero">
-  <h1>Welcome to Jinju</h1>
-  <p>Please select your language:</p>
-  <div style="margin-top: 2rem;">
-    <a href="/ko/" style="margin-right: 1rem; padding: 0.75rem 1.5rem; background: #2563eb; color: white; text-decoration: none; border-radius: 0.375rem;">한국어</a>
-    <a href="/en/" style="margin-right: 1rem; padding: 0.75rem 1.5rem; background: #2563eb; color: white; text-decoration: none; border-radius: 0.375rem;">English</a>
-    <a href="/ja/" style="padding: 0.75rem 1.5rem; background: #2563eb; color: white; text-decoration: none; border-radius: 0.375rem;">日本語</a>
+  <div class="hero-content" style="text-align: center; padding: 2rem;">
+    <h1 style="margin-bottom: 1rem;">Jinju's Blog</h1>
+    <p style="color: var(--text-secondary); margin-bottom: 1rem;">Redirecting to Korean version...</p>
+    <div style="margin-top: 1rem;">
+      <div class="loading-spinner" style="width: 40px; height: 40px; border: 3px solid var(--border); border-top: 3px solid var(--primary); border-radius: 50%; animation: spin 1s linear infinite; margin: 0 auto;"></div>
+    </div>
   </div>
 </div>
+
+<style>
+@keyframes spin {
+  0% { transform: rotate(0deg); }
+  100% { transform: rotate(360deg); }
+}
+</style>
