Complete multilingual blog setup with white-tone design

--- a/index.html
+++ b/index.html
@@ -8,14 +8,14 @@ layout: default
   const currentPath = window.location.pathname;
   
   if (currentPath === baseUrl + '/' || currentPath === '/') {
-    window.location.href = baseUrl + '/ko/';
+    window.location.href = baseUrl + '/en/';
   }
 </script>
 
 <div class="hero">
   <div class="hero-content" style="text-align: center; padding: 2rem;">
     <h1 style="margin-bottom: 1rem;">Jinju's Blog</h1>
-    <p style="color: var(--text-secondary); margin-bottom: 1rem;">Redirecting to Korean version...</p>
+    <p style="color: var(--text-secondary); margin-bottom: 1rem;">Redirecting to English version...</p>
     <div style="margin-top: 1rem;">
       <div class="loading-spinner" style="width: 40px; height: 40px; border: 3px solid var(--border); border-top: 3px solid var(--primary); border-radius: 50%; animation: spin 1s linear infinite; margin: 0 auto;"></div>
     </div>
